<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note Blotter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="journals">Journals</string>
    <string name="title_activity_new_note">NewNote</string>
    <string name="title_activity_journal_view">JournalView</string>
    <string name="title_activity_handnote">HandnoteActivity</string>
    <string name="title_activity_load_scribble">LoadScribble</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
    <string name="category">Category</string>
    <string name="addnote">Add Note</string>
    <string name="edittitle">Edit Title</string>
    <string name="addscribble">New Scribble</string>
    <string name="notetitle">Note Title</string>
    <string name="notetext">Note Text</string>
    <string name="newnote">New Note</string>
    <string name="newcat">New Category</string>
    <string name="journalName">Journal Name</string>
    <string name="loadscribble">Load Note</string>
    <string name="addpdf">Import PDF</string>

    <string-array name="planets_array">
        <item>Team Software</item>
        <item>Concurrent</item>
        <item>Formal Models</item>
    </string-array>
    
    <string-array name="size_array">
        <item>Font Size</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
        <item>32</item>
        <item>36</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>
    
    <string-array name="color_array">
        <item>Font Color</item>
        <item>Black</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Cyan</item>
        <item>Magenta</item>
        <item>Gray</item>
        <item>Dark Gray</item>
        <item>Light Gray</item>
        <item>White</item>
    </string-array>

    <string name="importpdf">Import PDF</string>
    <string name="title_activity_import_pdf">ImportPDF</string>
    <string name="pdfname">PDF Name</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="highlighter">Highlighter</string>
    <string name="pen">Pen</string>
    <string name="yellowh">YellowH</string>
    <string name="blueh">BlueH</string>
    <string name="greenh">GreenH</string>
    <string name="pinkh">PinkH</string>
    <string name="blackp">BlackP</string>
    <string name="bluep">BlueP</string>
    <string name="redp">RedP</string>
    <string name="greenp">GreenP</string>
    <string name="eraser">Eraser</string>
    <string name="clear">Clear</string>
    <string name="lefta">LeftA</string>
    <string name="center">Center</string>
    <string name="righta">RightA</string>
    <string name="bold">Bold</string>
    <string name="italicize">Italicize</string>
    <string name="underline">Underline</string>
    <string name="loadSelectedNote">Load Selected Note</string>
    <string name="title_activity_view_note">ViewNote</string>
    <string name="save_note">Save Note</string>
    <string name="journal_name">Journal Name</string>
    <string name="add_journal">Add Journal</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="logo">The logo of NoteBlotter</string>
    <string name="leftA">Align left picture</string>
    <string name="centerA">Center align image</string>
    <string name="rightA">Right align image</string>
    <string name="yellowHighlighter">Yellow highlighter image</string>
    <string name="blueHighlighter">Blue Highlighter image</string>
    <string name="greenHighlighter">Green Highlighter image</string>
    <string name="blue_pen">Blue pen image</string>
    <string name="red_pen">Red pen image</string>
    <string name="green_pen">Green pen image</string>
    <string name="pinkHighlighter">Pink highlighter image</string>
    <string name="black_pen">Black pen image</string>
    <string name="size">Size</string>
    <string name="red">Red</string>
    <string name="size_prompt">Size</string>

</resources>
