<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newnotepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/journalspinner"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".60" />

        <Button
            android:id="@+id/addbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".40"
            android:onClick="save"
            android:text="@string/addnote" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <EditText
            android:id="@+id/titletext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/notetitle" />

        <requestFocus />

        <EditText
            android:id="@+id/notetext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/titletext"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/notetext"
            android:inputType="textMultiLine"
            android:paddingLeft="8dip" />

        <mtu.notes.ScribbleView
            android:id="@+id/scribbles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/titletext" />

        <SlidingDrawer
            android:id="@+id/slidingDrawer"
            android:layout_width="250dip"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/notetext"
            android:content="@+id/content"
            android:handle="@+id/handle"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/handle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@+string/slidingDrawerButton"
                android:onClick="drawToggle"
                android:src="@drawable/arrow" />

            <LinearLayout
                android:id="@id/content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <ToggleButton
                    android:id="@+id/drawToggle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_default"
                    android:onClick="drawToggle"
                    android:text="@string/togglebutton"
                    android:textOff="Click to Draw"
                    android:textOn="Click to Type" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageButton
                        android:id="@+id/yellowHigh"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:contentDescription="@string/yellowHighlighter"
                        android:onClick="highlighterYellow"
                        android:src="@drawable/yellow_highlighter" />

                    <ImageButton
                        android:id="@+id/blueHigh"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:contentDescription="@string/blueHighlighter"
                        android:onClick="highlighterBlue"
                        android:src="@drawable/blue_highlighter" />

                    <ImageButton
                        android:id="@+id/leftA"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:contentDescription="@string/leftA"
                        android:onClick="alignLeft"
                        android:paddingBottom="3dip"
                        android:paddingLeft="3dip"
                        android:paddingRight="3dip"
                        android:paddingTop="2dip"
                        android:src="@drawable/align_left" />

                    <ImageButton
                        android:id="@+id/center"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:contentDescription="@string/centerA"
                        android:onClick="alignCenter"
                        android:paddingBottom="3dip"
                        android:paddingLeft="3dip"
                        android:paddingRight="3dip"
                        android:paddingTop="2dip"
                        android:src="@drawable/align_center" />

                    <ImageButton
                        android:id="@+id/rightA"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:contentDescription="@string/rightA"
                        android:onClick="alignRight"
                        android:paddingBottom="3dip"
                        android:paddingLeft="3dip"
                        android:paddingRight="3dip"
                        android:paddingTop="2dip"
                        android:src="@drawable/align_right" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageButton
                        android:id="@+id/greenHigh"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:contentDescription="@string/greenHighlighter"
                        android:onClick="highlighterGreen"
                        android:src="@drawable/green_highlighter" />

                    <ImageButton
                        android:id="@+id/pinkHigh"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:contentDescription="@string/pinkHighlighter"
                        android:onClick="highlighterPink"
                        android:src="@drawable/pink_highlighter" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageButton
                        android:id="@+id/blackPen"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:contentDescription="@string/black_pen"
                        android:onClick="penBlack"
                        android:src="@drawable/black_pen" />

                    <ImageButton
                        android:id="@+id/bluePen"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:contentDescription="@string/blue_pen"
                        android:onClick="penBlue"
                        android:src="@drawable/blue_pen" />

                    <Spinner
                        android:id="@+id/sizeSpinner"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:entries="@array/size_array"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageButton
                        android:id="@+id/redPen"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:contentDescription="@string/red_pen"
                        android:onClick="penRed"
                        android:src="@drawable/red_pen" />

                    <ImageButton
                        android:id="@+id/greenPen"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:contentDescription="@string/green_pen"
                        android:onClick="penGreen"
                        android:src="@drawable/green_pen" />

                    <Spinner
                        android:id="@+id/colorSpinner"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:entries="@array/color_array"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/eraserButton"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:onClick="eraser"
                        android:text="@string/eraser" />

                    <Button
                        android:id="@+id/clearButton"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:onClick="clear"
                        android:text="@string/clear" />
                </LinearLayout>
            </LinearLayout>
        </SlidingDrawer>
    </RelativeLayout>

</LinearLayout>