<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newnotepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pdfname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Note Blotter"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="55sp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/journal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="journalView"
        android:text="@string/journals"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/blueHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/journal"
        android:layout_centerHorizontal="true"
        android:onClick="loadScribble"
        android:text="@string/loadscribble" />

    <Button
        android:id="@+id/newnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/journal"
        android:layout_centerHorizontal="true"
        android:onClick="newNote"
        android:text="@string/newnote" />

</RelativeLayout>